<package>
  <name>utl_teleop_key</name>
    <version>0.0.0</version>
  <description>The utl_teleop_key package</description>
  <maintainer email="will@todo.todo">will</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
 
  <run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>yocs_velocity_smoother</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
</package>
